tamtam indhold påbegyndt

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <!-- Required meta tags -->
@@ -48,14 +48,32 @@
 
     <section id="splash" class="row" style="position: relative;">
 
-        <div class="splash_billede"><img class="img-fluid" src="Sk%C3%A6rmbillede%202020-04-16%20kl.%2010.29.56.png"></div>
+        <div class="splash_billede"><img class="img-fluid w-100" src="tamtam.png"></div>
 
     </section>
 
 
-    <section id="info"></section>
+    <section id="info">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1>Bla bla bla noget om tamtam</h1>
+                    <p>Bla bla bla mere om tamtam</p>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="Artboard%205.png">
+                </div>
 
-    <section id="citat1"></section>
+            </div>
+        </div>
+    </section>
+
+    <section id="citat1">
+
+        <h1 class="text-center w-100 mt-5">Citat citat citat citat citat</h1>
+
+
+    </section>
 
     <section id="produkt"></section>
 
