alt indhold inde

--- a/index.html
+++ b/index.html
@@ -21,67 +21,212 @@
 <body>
 
 
-    <!--    <h1>tamtam</h1>-->
 
 
-    <!--
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">vores mission</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">community</a>
+                        <a class="nav-link active" aria-current="page" href="#info">tamtam hvad?</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">kampagner</a>
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="#facts">fakta</a>
+                    </li>
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="#produkt">tamponen</a>
+                    </li>
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="#guide">men hvordan?</a>
+                    </li>
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="#marks">bæredygtighed</a>
+                    </li>
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="#charity">velgørenhed</a>
+                    </li>
+                    <li class="nav-item ml-3">
+                        <a class="nav-link" href="#some">join us</a>
                     </li>
 
                 </ul>
             </div>
         </div>
     </nav>
--->
+
 
     <section id="splash" class="row" style="position: relative;">
 
-        <div class="splash_billede"><img class="img-fluid w-100" src="tamtam.png"></div>
+        <!--        <div class="splash_billede"><img class="img-fluid w-100" src="tamtam.png"></div>-->
 
     </section>
 
 
     <section id="info">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <h1>Bla bla bla noget om tamtam</h1>
-                    <p>Bla bla bla mere om tamtam</p>
+        <div class="container ">
+            <div class="row mt-5 pt-5">
+                <div class="col-md-7 ml-5 mt-5 ">
+                    <h1>tamtam hvad?</h1>
+                    <p>tamtam er intet andet end en genanvendelig tampon, really.<br>
+                        Ingen kemikalier, ingen miljøforurening, intet plastik <br> = no worries. <br> 7 tamponer til 7 dage. </p>
                 </div>
-                <div class="col-md-4">
-                    <img class="img-fluid w-100" src="Artboard%205.png">
+                <div class="col-md-4 mt-5 pt-5">
+                    <img class="img-fluid w-100" src="box.png">
                 </div>
 
             </div>
         </div>
     </section>
 
-    <section id="citat1">
+    <section id="citat1 ">
 
-        <h1 class="text-center w-100 mt-5">Citat citat citat citat citat</h1>
+        <div class="container mt-5 pt-5">
+            <div class="row">
+                <div class="col-md-5 mt-5 pt-5 mb-5 pb-5 ml-5">
+                    <h1 class="text-center w-100 mt-5 mb-5">girl, get your period <br> out of your panties <br>- vi maler byen rød!</h1>
+                </div>
+
+                <div class="col-md-6">
+                    <img class="img-fluid w-100" src="121107760_1224626657921936_6176475614522179870_n.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="facts">
+        <div class="container-fluid mt-5 pt-5 mb-5 pb-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="500.png">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="56000.png">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="1984.png">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="produkt">
+        <div class="container mt-5 pt-5">
+            <div class="row">
+                <div class="col-md-4 mb-5 pb-5 ml-5 pl-5">
+                    <img class="img-fluid w-75 ml-5" src="tampon.png">
+
+                </div>
+
+                <div class="col-md-5 ml-5">
+                    <h1 class="w-100 mt-5 mb-5">tamponen</h1>
+                    <p>En genanvendelig stoftampon, i ubleget,<br> organisk og bionedbrydeligt stofmateriale. <br> Vask den efter brug, så er den så god som ny! <br> <br> ... I hvert fald de næste 6 måneder.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="guide">
+        <div class="container-fluid mt-5 pt-5">
+            <div class="row">
+
+
+                <div class="col-md-5">
+                    <h1 class="w-100 mt-5 mb-5 ml-5"> men hvordan?</h1>
+                    <p class="ml-5"> Rutinen er idiotsikker, og så rimer den endda: <br> Rul, sno, bind, brug!</p>
+                </div>
+
+                <div class="col-md-6 mb-5 pb-5">
+                    <img class="img-fluid w-100" src="Artboard%203.png">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="citat2 mb-5 pb-5">
+        <div class="container-flud text-center mt-5 pt-5 mb-5 pb-5">
+            <h1><img class="img-fluid w-25 mt-5" src="realhands.png"></h1>
+
+
+            <h1 class="text-center w-100 mb-5 pb-5 mt-2">leaders bleed. period.</h1>
+
+        </div>
+
+    </section>
+
+    <section id="marks">
+        <h1 class="w-75 mt-5 pt-5 ml-5"> tamtam er naturligvis... </h1>
+        <div class="container-fluid mb-5 pb-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="mark1.png">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="mark3.png">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid w-100" src="mark2.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="charity">
+        <div class="container-fluid mt-5 pt-5">
+            <div class="row">
+
+
+                <div class="col-md-5 mt-5 pt-5 ml-5">
+                    <h1 class="w-100 mt-5 mb-5 ml-5"> we do charity!</h1>
+                    <p class="ml-5"> Med tamtam rækker din gode samvittighed længere end bare hvad du gør for miljøet. <br> Vi bruger nemlig en del af salget på at sørge for, at alle kvinder verden over har adgang til bind og tamponer når de menstruerer.</p>
+                </div>
+
+                <div class="col-md-6 mb-5 pb-5">
+                    <img class="img-fluid w-100" src="hearthands.png">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section id="some">
+        <div class="container-fluid mt-5 pt-5">
+            <div class="row">
+                <div class="col-md-6 mb-5 pb-5">
+                    <img class="img-fluid w-100" src="to.png">
+
+                </div>
+                <div class="col-md-5 ">
+                    <h1 class="w-100 mt-5 mb-5"> vær en del af vores community</h1>
+                    <p> Del din tamtam- eller menstruationshistorie under hashtagget #dubløder. For det gør vi allesammen! Og vi gør det alle sammen. </p>
+                    <a href="https://www.instagram.com/tamtamdanmark/?hl=da" target="_blank" class="btn hoverable mt-3" role="button">Instagram</a>
+                    <a href="https://www.facebook.com/Tamtam-101080468444150" target="_blank" class="btn hoverable mt-3 ml-3" role="button">Facebook</a>
+
+
+
+                </div>
+
+
+            </div>
+        </div>
+
 
 
     </section>
 
-    <section id="produkt"></section>
 
-    <section id="guide"></section>
 
-    <section id="citat2"></section>
 
-    <section id="questions"></section>
 
     <section id="footer"></section>
 
