--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
 
 
 
-
-
-
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon">☰</span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -190,7 +187,7 @@
                 </div>
 
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100" src="hearthands.png">
+                    <img class="img-fluid w-100 heart" src="hearthands.png">
 
                 </div>
             </div>
@@ -237,6 +234,4 @@
     <!-- Option 1: Bootstrap Bundle with Popper.js -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
 
-</body>
-
-</html>
+</body></html>
