--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
 
     <!-- Optional JavaScript; choose one of the two! -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+
+    <script src="gsap.min.js"></script>
+
+    <script src="ScrollTrigger.min.js"></script>
+
+    <script src="index.js"></script>
+
+
+
+
+
     <!-- Option 1: Bootstrap Bundle with Popper.js -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
 
