meta description og alt tekster

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Website til tamtam bæredygtige genanvendelige tamponer">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -73,7 +74,7 @@
                         Ingen kemikalier, ingen miljøforurening, intet plastik <br> = no worries. <br> 7 tamponer til 7 dage. </p>
                 </div>
                 <div class="col-md-4 mt-5 pt-5">
-                    <img class="img-fluid w-100" src="box.png">
+                    <img class="img-fluid w-100" src="box.png" alt="box">
                 </div>
 
             </div>
@@ -89,7 +90,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <img class="img-fluid w-100" src="121107760_1224626657921936_6176475614522179870_n.png">
+                    <img class="img-fluid w-100" src="121107760_1224626657921936_6176475614522179870_n.png" alt="tampon og kvinde">
                 </div>
             </div>
         </div>
@@ -99,13 +100,13 @@
         <div class="container-fluid mt-5 pt-5 mb-5 pb-5">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="500.png">
+                    <img class="img-fluid w-100" src="500.png" alt="fact1">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="56000.png">
+                    <img class="img-fluid w-100" src="56000.png" alt="fact2">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="1984.png">
+                    <img class="img-fluid w-100" src="1984.png" alt="fact3">
                 </div>
             </div>
         </div>
@@ -116,7 +117,7 @@
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-4 mb-5 pb-5 ml-5 pl-5">
-                    <img class="img-fluid w-75 ml-5" src="tampon.png">
+                    <img class="img-fluid w-75 ml-5" src="tampon.png" alt="tampon">
 
                 </div>
 
@@ -140,7 +141,7 @@
                 </div>
 
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100" src="Artboard%203.png">
+                    <img class="img-fluid w-100" src="Artboard%203.png" alt="guide">
 
                 </div>
             </div>
@@ -149,7 +150,7 @@
 
     <section id="citat2 mb-5 pb-5">
         <div class="container-flud text-center mt-5 pt-5 mb-5 pb-5">
-            <h1><img class="img-fluid w-25 mt-5" src="realhands.png"></h1>
+            <h1><img class="img-fluid w-25 mt-5" src="realhands.png" alt="hænder"></h1>
 
 
             <h1 class="text-center w-100 mb-5 pb-5 mt-2">leaders bleed. period.</h1>
@@ -163,13 +164,13 @@
         <div class="container-fluid mb-5 pb-5">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="mark1.png">
+                    <img class="img-fluid w-100" src="mark1.png" alt="mærke1">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="mark3.png">
+                    <img class="img-fluid w-100" src="mark3.png" alt="mærke2">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="mark2.png">
+                    <img class="img-fluid w-100" src="mark2.png" alt="mærke3">
                 </div>
             </div>
         </div>
@@ -187,7 +188,7 @@
                 </div>
 
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100 heart" src="hearthands.png">
+                    <img class="img-fluid w-100 heart" src="hearthands.png" alt="hjertehænder">
 
                 </div>
             </div>
@@ -200,14 +201,14 @@
         <div class="container-fluid mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100" src="to.png">
+                    <img class="img-fluid w-100" src="to.png" alt="highfive">
 
                 </div>
                 <div class="col-md-5 ">
                     <h1 class="w-100 mt-5 mb-5"> vær en del af vores community</h1>
                     <p> Del din tamtam- eller menstruationshistorie under hashtagget #dubløder. For det gør vi allesammen! Og vi gør det alle sammen. </p>
-                    <a href="https://www.instagram.com/tamtamdanmark/?hl=da" target="_blank" class="btn hoverable mt-3" role="button">Instagram</a>
-                    <a href="https://www.facebook.com/Tamtam-101080468444150" target="_blank" class="btn hoverable mt-3 ml-3" role="button">Facebook</a>
+                    <a href="https://www.instagram.com/tamtamdanmark/?hl=da" target="_blank" class="btn hoverable mt-3" role="button" rel="noreferrer">Instagram</a>
+                    <a href="https://www.facebook.com/Tamtam-101080468444150" target="_blank" class="btn hoverable mt-3 ml-3" role="button" rel="noreferrer">Facebook</a>
 
 
 
@@ -246,4 +247,6 @@
     <!-- Option 1: Bootstrap Bundle with Popper.js -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
 
-</body></html>
+</body>
+
+</html>
