tilføjet nye komprimerede billeder i html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         Ingen kemikalier, ingen miljøforurening, intet plastik <br> = no worries. <br> 7 tamponer til 7 dage. </p>
                 </div>
                 <div class="col-md-4 mt-5 pt-5">
-                    <img class="img-fluid w-100" src="box.png" alt="box">
+                    <img class="img-fluid w-100" src="billeder/produkt.png" alt="box">
                 </div>
 
             </div>
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <img class="img-fluid w-100" src="121107760_1224626657921936_6176475614522179870_n.png" alt="tampon og kvinde">
+                    <img class="img-fluid w-100" src="billeder/jump.png" alt="tampon og kvinde">
                 </div>
             </div>
         </div>
@@ -100,13 +100,13 @@
         <div class="container-fluid mt-5 pt-5 mb-5 pb-5">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="500.png" alt="fact1">
+                    <img class="img-fluid w-100" src="billeder/500%C3%A5r.png" alt="fact1">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="56000.png" alt="fact2">
+                    <img class="img-fluid w-100" src="billeder/56.000kr.png" alt="fact2">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="1984.png" alt="fact3">
+                    <img class="img-fluid w-100" src="billeder/1984.png" alt="fact3">
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-4 mb-5 pb-5 ml-5 pl-5">
-                    <img class="img-fluid w-75 ml-5" src="tampon.png" alt="tampon">
+                    <img class="img-fluid w-75 ml-5" src="billeder/Tampon.png" alt="tampon">
 
                 </div>
 
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100" src="Artboard%203.png" alt="guide">
+                    <img class="img-fluid w-100" src="billeder/guide.png" alt="guide">
 
                 </div>
             </div>
@@ -150,7 +150,7 @@
 
     <section id="citat2 mb-5 pb-5">
         <div class="container-flud text-center mt-5 pt-5 mb-5 pb-5">
-            <h1><img class="img-fluid w-25 mt-5" src="realhands.png" alt="hænder"></h1>
+            <h1><img class="img-fluid w-25 mt-5" src="billeder/hands.png" alt="hænder"></h1>
 
 
             <h1 class="text-center w-100 mb-5 pb-5 mt-2">leaders bleed. period.</h1>
@@ -164,13 +164,13 @@
         <div class="container-fluid mb-5 pb-5">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="mark1.png" alt="mærke1">
+                    <img class="img-fluid w-100" src="billeder/planet.png" alt="mærke1">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="mark3.png" alt="mærke2">
+                    <img class="img-fluid w-100" src="billeder/eco.png" alt="mærke2">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid w-100" src="mark2.png" alt="mærke3">
+                    <img class="img-fluid w-100" src="billeder/allergi.png" alt="mærke3">
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100 heart" src="hearthands.png" alt="hjertehænder">
+                    <img class="img-fluid w-100 heart" src="billeder/hjerte.png" alt="hjertehænder">
 
                 </div>
             </div>
@@ -201,7 +201,7 @@
         <div class="container-fluid mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 mb-5 pb-5">
-                    <img class="img-fluid w-100" src="to.png" alt="highfive">
+                    <img class="img-fluid w-100" src="billeder/hightfive.png" alt="highfive">
 
                 </div>
                 <div class="col-md-5 ">
